@@ -1,37 +1,29 @@
-FROM hikaruna/firebase-tools
+FROM debian:stretch as dynamic-link-lib
 
-# https://github.com/puckel/docker-airflow/issues/182#issuecomment-444683455
-RUN mkdir -p /usr/share/man/man1 \
-&& apt-get update && apt-get install -y \
-openjdk-8-jre \
-&& apt-get clean \
-&& rm -rf /var/lib/apt/lists/*
+FROM buildpack-deps:stretch-curl as jar-get
+RUN curl -O https://storage.googleapis.com/firebase-preview-drop/emulator/cloud-firestore-emulator-v1.8.4.jar
 
-RUN firebase setup:emulators:firestore
+FROM openjdk as jre-build
+RUN jlink \
+--add-modules \
+java.base,\
+java.desktop,\
+java.logging,\
+java.management,\
+java.naming,\
+java.sql,\
+java.xml,\
+jdk.httpserver,\
+jdk.unsupported \
+--compress=2 --output /jre
 
-WORKDIR /app
-
-RUN echo -n 'rules_version = '2';\n\
-service cloud.firestore {\n\
-  match /databases/{database}/documents {\n\
-    match /{document=**} {\n\
-      allow read, write;\n\
-    }\n\
-  }\n\
-}' > firestore.rules
-
-RUN echo -n '{\n\
-  "firestore": {\n\
-    "rules": "firestore.rules"\n\
-  },\n\
-  "emulators": {\n\
-    "firestore": {\n\
-      "host": "0.0.0.0"\n\
-    }\n\
-  }\n\
-}' > firebase.json
+FROM scratch
+COPY --from=dynamic-link-lib /lib64/ld-linux-x86-64.so.2 /lib64/ld-linux-x86-64.so.2
+COPY --from=dynamic-link-lib /lib/x86_64-linux-gnu /lib/x86_64-linux-gnu
+COPY --from=jre-build /jre /jre
+ENV PATH $PATH:/jre/bin
+COPY --from=jar-get /cloud-firestore-emulator-v1.8.4.jar /
 
 EXPOSE 8080
-EXPOSE 8081
 
-CMD [ "firebase", "emulators:start", "--only", "firestore" ]
+ENTRYPOINT [ "java", "-jar", "/cloud-firestore-emulator-v1.8.4.jar" ]
